UFF-028 - criando endpoint de criação de tabuleiro e persistindo jogo no banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.database-platform = org.hibernate.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto = update
 
+spring.datasource.url = jdbc:sqlite:chess.sqlite
+spring.datasource.driver-class-name = org.sqlite.JDBC
+
+spring.datasource.username = admin
+spring.datasource.password = admin
