--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+## DATABASE ##
+chess.sqlite
+
 ### STS ###
 .apt_generated
 .classpath
@@ -35,3 +38,4 @@ out/
 
 ### VS Code ###
 .vscode/
+
