--- a/gradle/jacoco.gradle
+++ b/gradle/jacoco.gradle
@@ -26,7 +26,8 @@ jacocoTestReport {
             'src/main/kotlin/com/uff/br/xadruffbackend/GameRepository*',
             'src/main/kotlin/com/uff/br/xadruffbackend/XadruffBackendApplication*',
             'src/main/kotlin/com/uff/br/xadruffbackend/ai**',
-            'src/main/kotlin/com/uff/br/xadruffbackend/helper**'
+            'src/main/kotlin/com/uff/br/xadruffbackend/helper**',
+            'src/main/kotlin/com/uff/br/xadruffbackend/exception**'
     ]
 
     project.ext.exclusionsForJaCoCo = project.ext.exclusions.collect({
