--- a/gradle/jacoco.gradle
+++ b/gradle/jacoco.gradle
@@ -22,11 +22,17 @@ jacocoTestReport {
     }
 
     project.ext.exclusions = [
-            'src/main/kotlin/com/uff/br/xadruffbackend/ChessController*',
-            'src/main/kotlin/com/uff/br/xadruffbackend/GameRepository*',
+            'src/main/kotlin/com/uff/br/xadruffbackend/controller**',
+            'src/main/kotlin/com/uff/br/xadruffbackend/repository**',
             'src/main/kotlin/com/uff/br/xadruffbackend/XadruffBackendApplication*',
             'src/main/kotlin/com/uff/br/xadruffbackend/helper**',
-            'src/main/kotlin/com/uff/br/xadruffbackend/exception**'
+            'src/main/kotlin/com/uff/br/xadruffbackend/exception**',
+            'src/main/kotlin/com/uff/br/xadruffbackend/annotation**',
+            'src/main/kotlin/com/uff/br/xadruffbackend/model**',
+            'src/main/kotlin/com/uff/br/xadruffbackend/config**',
+            'src/main/kotlin/com/uff/br/xadruffbackend/dto/request**',
+            'src/main/kotlin/com/uff/br/xadruffbackend/dto/response**',
+            'src/main/kotlin/com/uff/br/xadruffbackend/dto/enum**',
     ]
 
     project.ext.exclusionsForJaCoCo = project.ext.exclusions.collect({
