--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.jpa.database-platform = org.hibernate.dialect.SQLiteDialect
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url = jdbc:sqlite:chess.sqlite
-spring.datasource.driver-class-name = org.sqlite.JDBC
 
 spring.datasource.username = admin
 spring.datasource.password = admin
 spring.datasource.maxActive=1
 spring.datasource.hikari.maximum-pool-size=1
 spring.jpa.open-in-view = false
+
